@@ -1,19 +1,10 @@
 {
-  "timestamp" : "2024-08-02T01:33:06Z",
-  "count_outdated" : 8214,
-  "uniques_outdated" : 3657,
-  "count" : 8219,
-  "uniques" : 3660,
+  "timestamp" : "2024-08-03T01:25:49Z",
+  "count_outdated" : 8216,
+  "uniques_outdated" : 3658,
+  "count" : 8220,
+  "uniques" : 3661,
   "clones" : [
-    {
-      "timestamp": "2024-07-19T00:00:00Z",
-      "count": 2,
-      "count_minmax": [ 2, 2 ],
-      "count_decinc": [ 0, 2 ],
-      "uniques": 1,
-      "uniques_minmax": [ 1, 1 ],
-      "uniques_decinc": [ 0, 1 ]
-    },
     {
       "timestamp": "2024-07-20T00:00:00Z",
       "count": 2,
@@ -25,6 +16,15 @@
     },
     {
       "timestamp": "2024-07-29T00:00:00Z",
+      "count": 1,
+      "count_minmax": [ 1, 1 ],
+      "count_decinc": [ 0, 1 ],
+      "uniques": 1,
+      "uniques_minmax": [ 1, 1 ],
+      "uniques_decinc": [ 0, 1 ]
+    },
+    {
+      "timestamp": "2024-08-02T00:00:00Z",
       "count": 1,
       "count_minmax": [ 1, 1 ],
       "count_decinc": [ 0, 1 ],
