@@ -1,12 +1,7 @@
 {
-  "count": 5,
-  "uniques": 2,
+  "count": 4,
+  "uniques": 3,
   "clones": [
-    {
-      "timestamp": "2024-07-19T00:00:00Z",
-      "count": 2,
-      "uniques": 1
-    },
     {
       "timestamp": "2024-07-20T00:00:00Z",
       "count": 2,
@@ -14,6 +9,11 @@
     },
     {
       "timestamp": "2024-07-29T00:00:00Z",
+      "count": 1,
+      "uniques": 1
+    },
+    {
+      "timestamp": "2024-08-02T00:00:00Z",
       "count": 1,
       "uniques": 1
     }
